@@ -3,7 +3,10 @@
  *   Data East BSMT2000 driver
  *   by Aaron Giles
  *
- *   Modifications for PINMAME by Steve Ellenoff & Martin Adrian
+ *   Chip is actually a TMS320C15 DSP with embedded mask rom
+ *   Trivia: BSMT stands for "Brian Schmidt's Mouse Trap"
+ *
+ *   Modifications for PINMAME by Steve Ellenoff & Martin Adrian & Carsten Waechter
  *
  *             - TODO: 1)Certain effects are missing (sound played when BSMT DMD animation comes on in stereo games)
  *             -       2)Batman,ST25th and Hook set Mode 0 (after setting Mode 1), but seem to still want to use Mode 1
